<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/sec100_p114_txt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:text="@string/sec100_p114"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp">
            <CheckBox
                android:id="@+id/sec100_p114_ck1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sec100_p114_sp1"
                />
            <CheckBox
                android:id="@+id/sec100_p114_ck2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sec100_p114_sp2"
                />
            <CheckBox
                android:id="@+id/sec100_p114_ck3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sec100_p114_sp3"
                />
            <CheckBox
                android:id="@+id/sec100_p114_ck4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sec100_p114_sp4"
                />
            <CheckBox
                android:id="@+id/sec100_p114_ck5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sec100_p114_sp5"
                />
            <CheckBox
                android:id="@+id/sec100_p114_ck6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sec100_p114_sp6"
                />
            <CheckBox
                android:id="@+id/sec100_p114_ck7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sec100_p114_sp7"
                />
            <EditText
                android:id="@+id/txtEspecifique_p114"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Especifique"
                android:visibility="gone"/>
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>