<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/check_box_pregunta"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:text="@string/sec400_p409"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp">
            <CheckBox
                android:id="@+id/sec400_p409_ck1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sec400_p409_sp1"
                />
            <CheckBox
                android:id="@+id/sec400_p409_ck2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sec400_p409_sp2"
                />
            <CheckBox
                android:id="@+id/sec400_p409_ck3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sec400_p409_sp3"
                />
            <CheckBox
                android:id="@+id/sec400_p409_ck4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sec400_p409_sp4"
                />
            <CheckBox
                android:id="@+id/sec400_p409_ck5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sec400_p409_sp5"
                />
            <EditText
                android:id="@+id/txtEspecifique_p409"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Especifique"
                android:visibility="gone"/>
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>