<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/check_box_pregunta"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:text="@string/sec100_p107"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp">
            <CheckBox
                android:id="@+id/sec100_p107_ck1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sec100_p107_sp1"
                />
            <CheckBox
                android:id="@+id/sec100_p107_ck2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sec100_p107_sp2"
                />
            <CheckBox
                android:id="@+id/sec100_p107_ck3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sec100_p107_sp3"
                />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>